--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 /* Chameleon - Identify Users. See chameleon.io */
 
 // IMPORTANT: Replace USER.ID_IN_DB, USER.EMAIL, USER.FULL_NAME below with your app's actual variable names.
-chmln.identify(USER.ID_IN_DB, {     // REQUIRED, the unique ID of each user in your database (e.g. 23443 or "690b80e5f433ea81b96c9bf6")
-  uid_hash: USER.ID_HASH_FROM_BACKEND, // REQUIRED, the sha256 of the User ID as outlined here => https://github.com/chamaeleonidae/verification
+chmln.identify(1234, {     // REQUIRED, the unique ID of each user in your database (e.g. 23443 or "690b80e5f433ea81b96c9bf6")
 });
 
 </script>
